# Quantam-Library

./: .gitignore  README.md
.github/: social-posts.md
docs/: _config.yml  api.html  index.html  qcb-api.html  qcb-whitepaper.html  qcb.html  quantum-verification.html  whitepaper.html
docs/_layouts/: default.html
docs/assets/css/: style.css
fast-fpe/: Cargo.toml  README.md  SECURITY.md
fast-fpe/crates/fast-core/: Cargo.toml
fast-fpe/crates/fast-core/benches/: throughput.rs
fast-fpe/crates/fast-core/examples/: batch_tokenize.rs  credit_card.rs  ssn.rs
fast-fpe/crates/fast-core/src/: cipher.rs  domain.rs  error.rs  lib.rs  params.rs  sbox.rs  setup.rs  spn.rs  types.rs
fast-fpe/crates/fast-core/tests/: cross_validate.rs  known_answer.rs  properties.rs  roundtrip.rs
fast-fpe/crates/fast-ff1/: Cargo.toml
fast-fpe/crates/fast-ff1/src/: ff1.rs  lib.rs
fast-fpe/crates/fast-migrate/: Cargo.toml
fast-fpe/crates/fast-migrate/src/: lib.rs  migrate.rs
fast-fpe/crates/fast-python/: Cargo.toml  pyproject.toml
fast-fpe/crates/fast-python/python/fast_fpe/: __init__.py
fast-fpe/crates/fast-python/python/tests/: test_fast.py  test_quantum_resistance.py
fast-fpe/crates/fast-python/src/: lib.rs
fast-fpe/docs/: whitepaper.md
fast-fpe/vectors/: fast_alpha_test.json  fast_decimal_test.json  ff1_nist_vectors.json
qcb-aead/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
qcb-aead/crates/qcb-core/: Cargo.toml
qcb-aead/crates/qcb-core/src/: error.rs  lib.rs  qcb.rs  tbc.rs  types.rs
qcb-aead/crates/qcb-python/: Cargo.toml  pyproject.toml
qcb-aead/crates/qcb-python/python/qcb_aead/: __init__.py
qcb-aead/crates/qcb-python/python/tests/: test_qcb.py
qcb-aead/crates/qcb-python/src/: lib.rs
qcb-aead/docs/: whitepaper.md
qcb-aead/vectors/: qcb_test_vectors.json
syncoda-fast/: Cargo.toml  README.md
syncoda-fast/src/: lib.rs  tokenizer.rs
