[workspace]
members = [
    "crates/fast-core",
    "crates/fast-ff1",
    "crates/fast-python",
    "crates/fast-migrate",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
rust-version = "1.70"

[workspace.dependencies]
aes = "0.8"
cmac = "0.7"
ctr = "0.9"
cipher = { version = "0.4", features = ["std"] }
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
fast-core = { path = "crates/fast-core" }
fast-ff1 = { path = "crates/fast-ff1" }

