[workspace]
members = [
    "crates/qcb-core",
    "crates/qcb-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Khalilah Aisha al-Wadhi"]

[workspace.dependencies]
aes = "0.8"
cipher = "0.4"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
thiserror = "2.0"
