[package]
name = "fast-ff1"
description = "FF1 format-preserving encryption (NIST SP 800-38G) for comparison and migration"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aes = { workspace = true }
cipher = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
