[package]
name = "qcb-core"
description = "QCB: Quantum-oracle-resistant AEAD — the only authenticated encryption mode with provable Q2-model security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes = { workspace = true }
cipher = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = "0.4"
